# multi-game-launcher

./: .gitignore  aaavex++.py  alter policy "Allow all users to read da  example.py  flake.nix  hints.py  import sys copy 2.py  import sys copy 3.py  import sys copy.py  import sys.py  launcher - Copy.cmd  launcher.cmd  launcher.py  launcher.sh  main.css  pyproject.toml  pyrightconfig.json  readme.md  requirements.txt  shell.nix  typos.toml  vex++.cmd  vex++.py
base/: pyproject.toml
base/launcher/: PROTO.py  __init__.py  main.css
launcher/: __init__.py  example.py
