# pyproject.toml

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "launcher"
version = "0.1.0"
description = "A project that runs launcher.py"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
license = { text = "GLPv3" }
keywords = ["example", "python", "package"]
dependencies = [
  "brotli==1.2.0",
  "certifi==2025.11.12",
  "charset-normalizer==3.4.4",
  "idna==3.11",
  "inflate64==1.0.4",
  "multivolumefile==0.2.3",
  "psutil==7.2.0",
  "py7zr==1.1.0",
  "pybcj==1.0.7",
  "pycryptodomex==3.23.0",
  "pyppmd==1.3.1",
  "PySide6==6.10.1",
  "PySide6_Addons==6.10.1",
  "PySide6_Essentials==6.10.1",
  "requests==2.32.5",
  "shiboken6==6.10.1",
  "texttable==1.7.0",
  "urllib3==2.6.2"
]

[tool.setuptools]
packages = ["launcher"]  # Ensure you specify the correct package name (or remove if not applicable)

